--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <header>Hello Git</header>
+    <header>
+        <h1>Hello Git!</h1>
+    </header>
     <main>
         <h2>Links</h2>
         <ul>
             <li>
-                <a href="https://github.com/dashboard">Visit GitHub</a>
+                <a href="https://git-scm.com">Visit Git website</a>
             </li>
         </ul>
-
-
     </main>
 </body>
 </html>
